Fixed dark mode to work seemlessly and with no bugs

--- a/public/styles/dark_theme.css
+++ b/public/styles/dark_theme.css
@@ -1,27 +1,27 @@
-.primary-dark {
+.primary-color {
     background-color: rgb(0, 0, 0);
 }
 
-.secondary-dark {
+.secondary-color {
     background-color: rgb(67, 67, 67);
 }
 
-.tertiary-dark {
+.tertiary-color {
     background-color: rgb(137, 137, 137);
 }
 
-.quaternary-dark {
+.quaternary-color {
     background-color: rgb(190, 190, 190);
 }
 
-.font-dark {
+.font-color {
     color: rgb(255, 255, 255);
 }
 
-.borders-dark {
+.borders-color {
     border: none;
 }
 
-.hrLines-dark {
+.hrLines-color {
     border: 1px solid white;
 }
